--- a/UnitTests/TestBeamScheme.fpcunit.ini
+++ b/UnitTests/TestBeamScheme.fpcunit.ini
@@ -44,7 +44,7 @@ Test1DParamFuncs.TestFieldSize501D.Expanded=0
 Test1DParamFuncs.TestNoFunc1D.Checked=1
 Test1DParamFuncs.TestNoFunc1D.Expanded=0
 TestSingleProfile.Checked=1
-TestSingleProfile.Expanded=1
+TestSingleProfile.Expanded=0
 TestSingleProfile.TestGetCentre_odd.Checked=1
 TestSingleProfile.TestGetCentre_odd.Expanded=0
 TestSingleProfile.TestGetCentre_even.Checked=1
@@ -79,6 +79,10 @@ TestBeam.TestMin.Checked=1
 TestBeam.TestMin.Expanded=0
 TestBeam.TestMax.Checked=1
 TestBeam.TestMax.Expanded=0
+TestBeam.TestInvert.Checked=1
+TestBeam.TestInvert.Expanded=0
+TestBeam.TestCentre.Checked=1
+TestBeam.TestCentre.Expanded=0
 TTestImport.Checked=1
 TTestImport.Expanded=1
 TTestImport.TestMapCheckOpen.Checked=1
