add IFA to profile

--- a/UnitTests/TestBeamScheme.fpcunit.ini
+++ b/UnitTests/TestBeamScheme.fpcunit.ini
@@ -1,6 +1,6 @@
 [WindowState]
-Left=1125
-Top=176
+Left=1142
+Top=177
 Width=575
 Height=663
 
@@ -8,7 +8,7 @@ Height=663
 All Tests.Checked=1
 All Tests.Expanded=1
 Test1DParamFuncs.Checked=1
-Test1DParamFuncs.Expanded=0
+Test1DParamFuncs.Expanded=1
 Test1DParamFuncs.TestCaxVal1D_no_norm.Checked=1
 Test1DParamFuncs.TestCaxVal1D_no_norm.Expanded=0
 Test1DParamFuncs.TestCaxVal1D_norm_cax.Checked=1
@@ -83,8 +83,20 @@ TestBeam.TestInvert.Checked=1
 TestBeam.TestInvert.Expanded=0
 TestBeam.TestCentre.Checked=1
 TestBeam.TestCentre.Expanded=0
+TestBeam.TestCreateXProfile.Checked=1
+TestBeam.TestCreateXProfile.Expanded=0
+TestBeam.TestCreateYProfile.Checked=1
+TestBeam.TestCreateYProfile.Expanded=0
+TestBeam.TestCreateOffsetProfile.Checked=1
+TestBeam.TestCreateOffsetProfile.Expanded=0
+TestBeam.TestCreateDiagonalProfile.Checked=1
+TestBeam.TestCreateDiagonalProfile.Expanded=0
+TestBeam.TestCreateWideProfile.Checked=1
+TestBeam.TestCreateWideProfile.Expanded=0
+TestBeam.TestCreateDiagonalOffsetWideProfile.Checked=1
+TestBeam.TestCreateDiagonalOffsetWideProfile.Expanded=0
 TTestImport.Checked=1
-TTestImport.Expanded=1
+TTestImport.Expanded=0
 TTestImport.TestMapCheckOpen.Checked=1
 TTestImport.TestMapCheckOpen.Expanded=0
 TTestImport.TestMapCheckOpen_14_Feb_2008_A.Checked=1
@@ -106,7 +118,7 @@ TTestImport.TestBMPOpen.Expanded=0
 TTestImport.TestRAWOpen.Checked=1
 TTestImport.TestRAWOpen.Expanded=0
 Test2DParamFuncs.Checked=1
-Test2DParamFuncs.Expanded=1
+Test2DParamFuncs.Expanded=0
 Test2DParamFuncs.TestCaxVal2D_no_norm.Checked=1
 Test2DParamFuncs.TestCaxVal2D_no_norm.Expanded=0
 Test2DParamFuncs.TestCaxVal2D_norm_cax.Checked=1
