--- a/beamscheme.lpi
+++ b/beamscheme.lpi
@@ -160,9 +160,8 @@
         <ComponentName Value="BSForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <IsVisibleTab Value="True"/>
-        <TopLine Value="134"/>
-        <CursorPos X="78" Y="157"/>
+        <TopLine Value="290"/>
+        <CursorPos X="13" Y="307"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -823,8 +822,8 @@
         <Filename Value="source/bstypes.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="3"/>
-        <TopLine Value="103"/>
-        <CursorPos X="13" Y="81"/>
+        <TopLine Value="838"/>
+        <CursorPos Y="343"/>
         <UsageCount Value="206"/>
         <Loaded Value="True"/>
       </Unit93>
@@ -873,7 +872,7 @@
         <Filename Value="source/param2dfuncs.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="6"/>
-        <TopLine Value="117"/>
+        <TopLine Value="159"/>
         <CursorPos X="21" Y="130"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
@@ -925,7 +924,7 @@
         <EditorIndex Value="4"/>
         <TopLine Value="147"/>
         <CursorPos X="38" Y="165"/>
-        <UsageCount Value="180"/>
+        <UsageCount Value="183"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
       </Unit105>
@@ -959,7 +958,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="168"/>
+        <UsageCount Value="171"/>
       </Unit109>
       <Unit110>
         <Filename Value="source/dicom.pas"/>
@@ -968,15 +967,30 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="168"/>
+        <UsageCount Value="171"/>
       </Unit110>
       <Unit111>
         <Filename Value="source/param1dfuncs.pas"/>
         <UnitName Value="param1Dfuncs"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="5"/>
-        <TopLine Value="3"/>
-        <CursorPos Y="129"/>
-        <UsageCount Value="78"/>
+        <TopLine Value="223"/>
+        <CursorPos X="69" Y="227"/>
+        <ExtraEditorCount Value="2"/>
+        <ExtraEditor1>
+          <EditorIndex Value="-1"/>
+          <WindowIndex Value="-1"/>
+          <TopLine Value="-1"/>
+          <CursorPos X="-1" Y="-1"/>
+        </ExtraEditor1>
+        <ExtraEditor2>
+          <IsVisibleTab Value="True"/>
+          <EditorIndex Value="-1"/>
+          <WindowIndex Value="1"/>
+          <TopLine Value="224"/>
+          <CursorPos X="28" Y="225"/>
+        </ExtraEditor2>
+        <UsageCount Value="80"/>
         <Loaded Value="True"/>
       </Unit111>
       <Unit112>
@@ -1030,123 +1044,127 @@
         <UsageCount Value="7"/>
       </Unit119>
     </Units>
-    <JumpHistory Count="29" HistoryIndex="28">
+    <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="source/bstypes.pas"/>
-        <Caret Line="630" TopLine="618"/>
+        <Caret Line="585" TopLine="564"/>
       </Position1>
       <Position2>
         <Filename Value="source/bstypes.pas"/>
-        <Caret Line="631" TopLine="618"/>
+        <Caret Line="573" Column="20" TopLine="564"/>
       </Position2>
       <Position3>
         <Filename Value="source/bstypes.pas"/>
-        <Caret Line="632" TopLine="618"/>
+        <Caret Line="506" Column="72" TopLine="484"/>
       </Position3>
       <Position4>
         <Filename Value="source/bstypes.pas"/>
-        <Caret Line="633" TopLine="618"/>
+        <Caret Line="123" Column="34" TopLine="84"/>
       </Position4>
       <Position5>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="634" TopLine="618"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="142" Column="91" TopLine="125"/>
       </Position5>
       <Position6>
         <Filename Value="source/bstypes.pas"/>
-        <Caret Line="635" TopLine="618"/>
+        <Caret Line="510" Column="44" TopLine="35"/>
       </Position6>
       <Position7>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="636" TopLine="618"/>
+        <Filename Value="source/param1dfuncs.pas"/>
+        <Caret Line="135" Column="55" TopLine="113"/>
       </Position7>
       <Position8>
         <Filename Value="source/bstypes.pas"/>
-        <Caret Line="637" TopLine="618"/>
+        <Caret Line="62" Column="29" TopLine="43"/>
       </Position8>
       <Position9>
         <Filename Value="source/bstypes.pas"/>
-        <Caret Line="638" TopLine="618"/>
+        <Caret Line="856" Column="17" TopLine="840"/>
       </Position9>
       <Position10>
         <Filename Value="source/bstypes.pas"/>
-        <Caret Line="639" TopLine="618"/>
+        <Caret Line="640" Column="37" TopLine="625"/>
       </Position10>
       <Position11>
         <Filename Value="source/bstypes.pas"/>
-        <Caret Line="630" Column="23" TopLine="617"/>
+        <Caret Line="82" TopLine="49"/>
       </Position11>
       <Position12>
         <Filename Value="source/bstypes.pas"/>
-        <Caret Line="580" TopLine="564"/>
+        <Caret Line="926" Column="28" TopLine="907"/>
       </Position12>
       <Position13>
         <Filename Value="source/bstypes.pas"/>
-        <Caret Line="585" TopLine="564"/>
+        <Caret Line="932" TopLine="901"/>
       </Position13>
       <Position14>
         <Filename Value="source/bstypes.pas"/>
-        <Caret Line="573" Column="20" TopLine="564"/>
+        <Caret Line="48" TopLine="43"/>
       </Position14>
       <Position15>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="506" Column="72" TopLine="484"/>
+        <Filename Value="source/param1dfuncs.pas"/>
+        <Caret Line="129" TopLine="114"/>
       </Position15>
       <Position16>
         <Filename Value="source/bstypes.pas"/>
-        <Caret Line="123" Column="34" TopLine="84"/>
+        <Caret Line="675" Column="41" TopLine="650"/>
       </Position16>
       <Position17>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="142" Column="91" TopLine="125"/>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="1092" Column="54" TopLine="1067"/>
       </Position17>
       <Position18>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="510" Column="44" TopLine="35"/>
+        <Filename Value="source/param1dfuncs.pas"/>
+        <Caret Line="197" Column="19" TopLine="179"/>
       </Position18>
       <Position19>
         <Filename Value="source/param1dfuncs.pas"/>
-        <Caret Line="135" Column="55" TopLine="113"/>
+        <Caret Line="90" Column="26" TopLine="65"/>
       </Position19>
       <Position20>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="62" Column="29" TopLine="43"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="157" Column="78" TopLine="134"/>
       </Position20>
       <Position21>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="856" Column="17" TopLine="840"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="1350" Column="19" TopLine="1292"/>
       </Position21>
       <Position22>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="640" Column="37" TopLine="625"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="1344" Column="26" TopLine="1342"/>
       </Position22>
       <Position23>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="82" TopLine="49"/>
+        <Filename Value="source/param1dfuncs.pas"/>
+        <Caret Line="255" TopLine="223"/>
       </Position23>
       <Position24>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="926" Column="28" TopLine="907"/>
+        <Filename Value="source/param1dfuncs.pas"/>
+        <Caret Line="256" TopLine="225"/>
       </Position24>
       <Position25>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="932" TopLine="901"/>
+        <Filename Value="source/param1dfuncs.pas"/>
+        <Caret Line="98" TopLine="71"/>
       </Position25>
       <Position26>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="48" TopLine="43"/>
+        <Filename Value="source/param1dfuncs.pas"/>
+        <Caret Line="102" Column="12" TopLine="82"/>
       </Position26>
       <Position27>
         <Filename Value="source/param1dfuncs.pas"/>
-        <Caret Line="129" TopLine="114"/>
+        <Caret Line="275" Column="35" TopLine="239"/>
       </Position27>
       <Position28>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="675" Column="41" TopLine="650"/>
+        <Filename Value="source/param1dfuncs.pas"/>
+        <Caret Line="97" Column="63" TopLine="84"/>
       </Position28>
       <Position29>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="1092" Column="54" TopLine="1067"/>
+        <Filename Value="source/param1dfuncs.pas"/>
+        <Caret Line="100" Column="41" TopLine="79"/>
       </Position29>
+      <Position30>
+        <Filename Value="source/param1dfuncs.pas"/>
+        <Caret Line="257" Column="31" TopLine="230"/>
+      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
