--- a/UnitTests/TestBeamScheme.fpcunit.ini
+++ b/UnitTests/TestBeamScheme.fpcunit.ini
@@ -5,10 +5,10 @@ Width=575
 Height=663
 
 [Tests]
-All Tests.Checked=0
+All Tests.Checked=1
 All Tests.Expanded=1
 Test1DParamFuncs.Checked=1
-Test1DParamFuncs.Expanded=1
+Test1DParamFuncs.Expanded=0
 Test1DParamFuncs.TestCaxVal1D_no_norm.Checked=1
 Test1DParamFuncs.TestCaxVal1D_no_norm.Expanded=0
 Test1DParamFuncs.TestCaxVal1D_norm_cax.Checked=1
@@ -49,6 +49,10 @@ Test1DParamFuncs.TestPenumbra9010Left1D.Checked=1
 Test1DParamFuncs.TestPenumbra9010Left1D.Expanded=0
 Test1DParamFuncs.TestPenumbra9010Right1D.Checked=1
 Test1DParamFuncs.TestPenumbra9010Right1D.Expanded=0
+Test1DParamFuncs.TestPenumbra9050Left1D.Checked=1
+Test1DParamFuncs.TestPenumbra9050Left1D.Expanded=0
+Test1DParamFuncs.TestPenumbra9050Right1D.Checked=1
+Test1DParamFuncs.TestPenumbra9050Right1D.Expanded=0
 Test1DParamFuncs.TestFlatnessAve1D.Checked=1
 Test1DParamFuncs.TestFlatnessAve1D.Expanded=0
 Test1DParamFuncs.TestFlatnessDiff1D.Checked=1
@@ -61,103 +65,155 @@ Test1DParamFuncs.TestSymmetryRatio1D.Checked=1
 Test1DParamFuncs.TestSymmetryRatio1D.Expanded=0
 Test1DParamFuncs.TestSymmetryDiff1D.Checked=1
 Test1DParamFuncs.TestSymmetryDiff1D.Expanded=0
+Test1DParamFuncs.TestSymmetryArea1D_Odd.Checked=1
+Test1DParamFuncs.TestSymmetryArea1D_Odd.Expanded=0
+Test1DParamFuncs.TestSymmetryArea1D_Even.Checked=1
+Test1DParamFuncs.TestSymmetryArea1D_Even.Expanded=0
+Test1DParamFuncs.TestDeviationRatio1D.Checked=1
+Test1DParamFuncs.TestDeviationRatio1D.Expanded=0
+Test1DParamFuncs.TestDeviationDiff1D.Checked=1
+Test1DParamFuncs.TestDeviationDiff1D.Expanded=0
+Test1DParamFuncs.TestDeviationCAX1D.Checked=1
+Test1DParamFuncs.TestDeviationCAX1D.Expanded=0
 Test1DParamFuncs.TestNoFunc1D.Checked=1
 Test1DParamFuncs.TestNoFunc1D.Expanded=0
-TestSingleProfile.Checked=0
+TestSingleProfile.Checked=1
 TestSingleProfile.Expanded=0
-TestSingleProfile.TestGetCentre_odd.Checked=0
+TestSingleProfile.TestGetCentre_odd.Checked=1
 TestSingleProfile.TestGetCentre_odd.Expanded=0
-TestSingleProfile.TestGetCentre_even.Checked=0
+TestSingleProfile.TestGetCentre_even.Checked=1
 TestSingleProfile.TestGetCentre_even.Expanded=0
-TestSingleProfile.TestLeftEdge.Checked=0
+TestSingleProfile.TestLeftEdge.Checked=1
 TestSingleProfile.TestLeftEdge.Expanded=0
-TestSingleProfile.TestRightEdge.Checked=0
+TestSingleProfile.TestRightEdge.Checked=1
 TestSingleProfile.TestRightEdge.Expanded=0
-TestSingleProfile.TestLeftEdge_Limits.Checked=0
+TestSingleProfile.TestLeftEdge_Limits.Checked=1
 TestSingleProfile.TestLeftEdge_Limits.Expanded=0
-TestSingleProfile.TestRightEdge_Limits.Checked=0
+TestSingleProfile.TestRightEdge_Limits.Checked=1
 TestSingleProfile.TestRightEdge_Limits.Expanded=0
-TestSingleProfile.TestMin.Checked=0
+TestSingleProfile.TestMin.Checked=1
 TestSingleProfile.TestMin.Expanded=0
-TestSingleProfile.TestMax.Checked=0
+TestSingleProfile.TestMax.Checked=1
 TestSingleProfile.TestMax.Expanded=0
-TestBeam.Checked=0
-TestBeam.Expanded=1
-TestBeam.TestCentre_RowOddCollOdd.Checked=0
+TestSingleProfile.TestArea.Checked=1
+TestSingleProfile.TestArea.Expanded=0
+TestBeam.Checked=1
+TestBeam.Expanded=0
+TestBeam.TestCentre_RowOddCollOdd.Checked=1
 TestBeam.TestCentre_RowOddCollOdd.Expanded=0
-TestBeam.TestCentre_RowOddCollEven.Checked=0
+TestBeam.TestCentre_RowOddCollEven.Checked=1
 TestBeam.TestCentre_RowOddCollEven.Expanded=0
-TestBeam.TestCentre_RowEvenCollOdd.Checked=0
+TestBeam.TestCentre_RowEvenCollOdd.Checked=1
 TestBeam.TestCentre_RowEvenCollOdd.Expanded=0
-TestBeam.TestCentre_RowEvenCollEven.Checked=0
+TestBeam.TestCentre_RowEvenCollEven.Checked=1
 TestBeam.TestCentre_RowEvenCollEven.Expanded=0
-TestBeam.TestCoM.Checked=0
+TestBeam.TestCoM.Checked=1
 TestBeam.TestCoM.Expanded=0
-TestBeam.TestMin.Checked=0
+TestBeam.TestMin.Checked=1
 TestBeam.TestMin.Expanded=0
-TestBeam.TestMax.Checked=0
+TestBeam.TestMax.Checked=1
 TestBeam.TestMax.Expanded=0
-TestBeam.TestInvert.Checked=0
+TestBeam.TestInvert.Checked=1
 TestBeam.TestInvert.Expanded=0
-TestBeam.TestCentre.Checked=0
+TestBeam.TestCentre.Checked=1
 TestBeam.TestCentre.Expanded=0
-TestBeam.TestCreateXProfile.Checked=0
+TestBeam.TestCreateXProfile.Checked=1
 TestBeam.TestCreateXProfile.Expanded=0
-TestBeam.TestCreateYProfile.Checked=0
+TestBeam.TestCreateYProfile.Checked=1
 TestBeam.TestCreateYProfile.Expanded=0
-TestBeam.TestCreateOffsetProfile.Checked=0
+TestBeam.TestCreateOffsetProfile.Checked=1
 TestBeam.TestCreateOffsetProfile.Expanded=0
-TestBeam.TestCreateDiagonalProfile.Checked=0
+TestBeam.TestCreateDiagonalProfile.Checked=1
 TestBeam.TestCreateDiagonalProfile.Expanded=0
-TestBeam.TestCreateWideProfile.Checked=0
+TestBeam.TestCreateWideProfile.Checked=1
 TestBeam.TestCreateWideProfile.Expanded=0
-TestBeam.TestCreateDiagonalOffsetWideProfile.Checked=0
+TestBeam.TestCreateDiagonalOffsetWideProfile.Checked=1
 TestBeam.TestCreateDiagonalOffsetWideProfile.Expanded=0
-TTestImport.Checked=0
+TTestImport.Checked=1
 TTestImport.Expanded=0
-TTestImport.TestMapCheckOpen.Checked=0
+TTestImport.TestMapCheckOpen.Checked=1
 TTestImport.TestMapCheckOpen.Expanded=0
-TTestImport.TestMapCheckOpen_14_Feb_2008_A.Checked=0
+TTestImport.TestMapCheckOpen_14_Feb_2008_A.Checked=1
 TTestImport.TestMapCheckOpen_14_Feb_2008_A.Expanded=0
-TTestImport.TestDICOMOpen.Checked=0
+TTestImport.TestDICOMOpen.Checked=1
 TTestImport.TestDICOMOpen.Expanded=0
-TTestImport.TestDICOMOpen_RD.Checked=0
+TTestImport.TestDICOMOpen_RD.Checked=1
 TTestImport.TestDICOMOpen_RD.Expanded=0
-TTestImport.TestIBAOpen.Checked=0
+TTestImport.TestIBAOpen.Checked=1
 TTestImport.TestIBAOpen.Expanded=0
-TTestImport.TestPTWOpen.Checked=0
+TTestImport.TestPTWOpen.Checked=1
 TTestImport.TestPTWOpen.Expanded=0
-TTestImport.TestXIOOpen.Checked=0
+TTestImport.TestXIOOpen.Checked=1
 TTestImport.TestXIOOpen.Expanded=0
-TTestImport.TestBrainLabOpen.Checked=0
+TTestImport.TestBrainLabOpen.Checked=1
 TTestImport.TestBrainLabOpen.Expanded=0
-TTestImport.TestBMPOpen.Checked=0
+TTestImport.TestBMPOpen.Checked=1
 TTestImport.TestBMPOpen.Expanded=0
-TTestImport.TestRAWOpen.Checked=0
+TTestImport.TestRAWOpen.Checked=1
 TTestImport.TestRAWOpen.Expanded=0
-Test2DParamFuncs.Checked=0
+Test2DParamFuncs.Checked=1
 Test2DParamFuncs.Expanded=0
-Test2DParamFuncs.TestCaxVal2D_no_norm.Checked=0
+Test2DParamFuncs.TestCaxVal2D_no_norm.Checked=1
 Test2DParamFuncs.TestCaxVal2D_no_norm.Expanded=0
-Test2DParamFuncs.TestCaxVal2D_norm_cax.Checked=0
+Test2DParamFuncs.TestCaxVal2D_norm_cax.Checked=1
 Test2DParamFuncs.TestCaxVal2D_norm_cax.Expanded=0
-Test2DParamFuncs.TestCaxVal2D_norm_max.Checked=0
+Test2DParamFuncs.TestCaxVal2D_norm_max.Checked=1
 Test2DParamFuncs.TestCaxVal2D_norm_max.Expanded=0
-Test2DParamFuncs.TestMaxVal2D_no_norm.Checked=0
+Test2DParamFuncs.TestMaxVal2D_no_norm.Checked=1
 Test2DParamFuncs.TestMaxVal2D_no_norm.Expanded=0
-Test2DParamFuncs.TestMaxVal2D_norm_cax.Checked=0
+Test2DParamFuncs.TestMaxVal2D_norm_cax.Checked=1
 Test2DParamFuncs.TestMaxVal2D_norm_cax.Expanded=0
-Test2DParamFuncs.TestMaxVal2D_norm_max.Checked=0
+Test2DParamFuncs.TestMaxVal2D_norm_max.Checked=1
 Test2DParamFuncs.TestMaxVal2D_norm_max.Expanded=0
-Test2DParamFuncs.TestMinVal2D_no_norm.Checked=0
+Test2DParamFuncs.TestMinVal2D_no_norm.Checked=1
 Test2DParamFuncs.TestMinVal2D_no_norm.Expanded=0
-Test2DParamFuncs.TestMinVal2D_norm_cax.Checked=0
+Test2DParamFuncs.TestMinVal2D_norm_cax.Checked=1
 Test2DParamFuncs.TestMinVal2D_norm_cax.Expanded=0
-Test2DParamFuncs.TestMinVal2D_norm_max.Checked=0
+Test2DParamFuncs.TestMinVal2D_norm_max.Checked=1
 Test2DParamFuncs.TestMinVal2D_norm_max.Expanded=0
-Test2DParamFuncs.TestMinIFA2D.Checked=0
+Test2DParamFuncs.TestMinIFA2D.Checked=1
 Test2DParamFuncs.TestMinIFA2D.Expanded=0
-Test2DParamFuncs.TestUniformityCAX2D.Checked=0
+Test2DParamFuncs.TestUniformityCAX2D.Checked=1
 Test2DParamFuncs.TestUniformityCAX2D.Expanded=0
-Test2DParamFuncs.TestSymmetryAve2D.Checked=0
+Test2DParamFuncs.TestSymmetryAve2D.Checked=1
 Test2DParamFuncs.TestSymmetryAve2D.Expanded=0
+TestProtocolSNC.Checked=1
+TestProtocolSNC.Expanded=0
+TestProtocolSNC.TestProtocolAll.Checked=1
+TestProtocolSNC.TestProtocolAll.Expanded=0
+TestProtocolSNC.TestProtocolVarian.Checked=1
+TestProtocolSNC.TestProtocolVarian.Expanded=0
+TestProtocolPTW.Checked=1
+TestProtocolPTW.Expanded=0
+TestProtocolPTW.TestProtocolVarian.Checked=1
+TestProtocolPTW.TestProtocolVarian.Expanded=0
+TestProtocolPTW.TestProtocolSiemens.Checked=1
+TestProtocolPTW.TestProtocolSiemens.Expanded=0
+TestProtocolPTW.TestProtocolElekta.Checked=1
+TestProtocolPTW.TestProtocolElekta.Expanded=0
+TestProtocolPTW.TestProtocolAFSSAPS.Checked=1
+TestProtocolPTW.TestProtocolAFSSAPS.Expanded=0
+TestProtocolPTW.TestProtocolIEC.Checked=1
+TestProtocolPTW.TestProtocolIEC.Expanded=0
+TestProtocolIBA.Checked=1
+TestProtocolIBA.Expanded=0
+TestProtocolIBA.TestProtocolVarian.Checked=1
+TestProtocolIBA.TestProtocolVarian.Expanded=0
+TestProtocolIBA.TestProtocolSiemens.Checked=1
+TestProtocolIBA.TestProtocolSiemens.Expanded=0
+TestProtocolIBA.TestProtocolElekta.Checked=1
+TestProtocolIBA.TestProtocolElekta.Expanded=0
+TestProtocolIBA.TestProtocolAFSSAPS.Checked=1
+TestProtocolIBA.TestProtocolAFSSAPS.Expanded=0
+TestProtocolIBA.TestProtocolIEC.Checked=1
+TestProtocolIBA.TestProtocolIEC.Expanded=0
+TestProtocolIBA.TestProtocolDIN.Checked=1
+TestProtocolIBA.TestProtocolDIN.Expanded=0
+TestProtocolPylinac.Checked=1
+TestProtocolPylinac.Expanded=1
+TestProtocolPylinac.TestProtocolVarian.Checked=1
+TestProtocolPylinac.TestProtocolVarian.Expanded=0
+TestProtocolPylinac.TestProtocolSiemens.Checked=1
+TestProtocolPylinac.TestProtocolSiemens.Expanded=0
+TestProtocolPylinac.TestProtocolElekta.Checked=1
+TestProtocolPylinac.TestProtocolElekta.Expanded=0
