--- a/UnitTests/TestBeamScheme.lpi
+++ b/UnitTests/TestBeamScheme.lpi
@@ -38,7 +38,7 @@
         <PackageName Value="FCL"/>
       </Item5>
     </RequiredPackages>
-    <Units Count="9">
+    <Units Count="10">
       <Unit0>
         <Filename Value="TestBeamScheme.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -80,6 +80,10 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="test2Dparams"/>
       </Unit8>
+      <Unit9>
+        <Filename Value="testprotocols.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit9>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
