Validated against ImageJ

--- a/UnitTests/TestBeamScheme.fpcunit.ini
+++ b/UnitTests/TestBeamScheme.fpcunit.ini
@@ -33,6 +33,12 @@ Test1DParamFuncs.TestMinIFA1D_norm_cax.Checked=1
 Test1DParamFuncs.TestMinIFA1D_norm_cax.Expanded=0
 Test1DParamFuncs.TestMinIFA1D_norm_max.Checked=1
 Test1DParamFuncs.TestMinIFA1D_norm_max.Expanded=0
+Test1DParamFuncs.TestAveIFA1D_no_norm.Checked=1
+Test1DParamFuncs.TestAveIFA1D_no_norm.Expanded=0
+Test1DParamFuncs.TestAveIFA1D_norm_cax.Checked=1
+Test1DParamFuncs.TestAveIFA1D_norm_cax.Expanded=0
+Test1DParamFuncs.TestAveIFA1D_norm_max.Checked=1
+Test1DParamFuncs.TestAveIFA1D_norm_max.Expanded=0
 Test1DParamFuncs.TestFieldEdgeLeft501D.Checked=1
 Test1DParamFuncs.TestFieldEdgeLeft501D.Expanded=0
 Test1DParamFuncs.TestFieldEdgeRight501D.Checked=1
@@ -61,6 +67,8 @@ Test1DParamFuncs.TestFlatnessRatio1D.Checked=1
 Test1DParamFuncs.TestFlatnessRatio1D.Expanded=0
 Test1DParamFuncs.TestFlatnessCAX1D.Checked=1
 Test1DParamFuncs.TestFlatnessCAX1D.Expanded=0
+Test1DParamFuncs.TestUniformityAve1D.Checked=1
+Test1DParamFuncs.TestUniformityAve1D.Expanded=0
 Test1DParamFuncs.TestSymmetryRatio1D.Checked=1
 Test1DParamFuncs.TestSymmetryRatio1D.Expanded=0
 Test1DParamFuncs.TestSymmetryDiff1D.Checked=1
@@ -95,10 +103,16 @@ TestSingleProfile.TestMin.Checked=1
 TestSingleProfile.TestMin.Expanded=0
 TestSingleProfile.TestMax.Checked=1
 TestSingleProfile.TestMax.Expanded=0
+TestSingleProfile.TestAve.Checked=1
+TestSingleProfile.TestAve.Expanded=0
+TestSingleProfile.TestMaxDiff.Checked=1
+TestSingleProfile.TestMaxDiff.Expanded=0
+TestSingleProfile.TestPeak.Checked=1
+TestSingleProfile.TestPeak.Expanded=0
 TestSingleProfile.TestArea.Checked=1
 TestSingleProfile.TestArea.Expanded=0
 TestBeam.Checked=1
-TestBeam.Expanded=0
+TestBeam.Expanded=1
 TestBeam.TestCentre_RowOddCollOdd.Checked=1
 TestBeam.TestCentre_RowOddCollOdd.Expanded=0
 TestBeam.TestCentre_RowOddCollEven.Checked=1
@@ -113,6 +127,8 @@ TestBeam.TestMin.Checked=1
 TestBeam.TestMin.Expanded=0
 TestBeam.TestMax.Checked=1
 TestBeam.TestMax.Expanded=0
+TestBeam.TestAve.Checked=1
+TestBeam.TestAve.Expanded=0
 TestBeam.TestInvert.Checked=1
 TestBeam.TestInvert.Expanded=0
 TestBeam.TestCentre.Checked=1
@@ -152,7 +168,7 @@ TTestImport.TestBMPOpen.Expanded=0
 TTestImport.TestRAWOpen.Checked=1
 TTestImport.TestRAWOpen.Expanded=0
 Test2DParamFuncs.Checked=1
-Test2DParamFuncs.Expanded=0
+Test2DParamFuncs.Expanded=1
 Test2DParamFuncs.TestCaxVal2D_no_norm.Checked=1
 Test2DParamFuncs.TestCaxVal2D_no_norm.Expanded=0
 Test2DParamFuncs.TestCaxVal2D_norm_cax.Checked=1
@@ -171,20 +187,44 @@ Test2DParamFuncs.TestMinVal2D_norm_cax.Checked=1
 Test2DParamFuncs.TestMinVal2D_norm_cax.Expanded=0
 Test2DParamFuncs.TestMinVal2D_norm_max.Checked=1
 Test2DParamFuncs.TestMinVal2D_norm_max.Expanded=0
+Test2DParamFuncs.TestAve2D_no_norm.Checked=1
+Test2DParamFuncs.TestAve2D_no_norm.Expanded=0
+Test2DParamFuncs.TestAve2D_norm_cax.Checked=1
+Test2DParamFuncs.TestAve2D_norm_cax.Expanded=0
+Test2DParamFuncs.TestAve2D_norm_max.Checked=1
+Test2DParamFuncs.TestAve2D_norm_max.Expanded=0
 Test2DParamFuncs.TestMinIFA2D.Checked=1
 Test2DParamFuncs.TestMinIFA2D.Expanded=0
 Test2DParamFuncs.TestUniformityCAX2D.Checked=1
 Test2DParamFuncs.TestUniformityCAX2D.Expanded=0
+Test2DParamFuncs.TestUniformityAve2D.Checked=1
+Test2DParamFuncs.TestUniformityAve2D.Expanded=0
 Test2DParamFuncs.TestSymmetryAve2D.Checked=1
 Test2DParamFuncs.TestSymmetryAve2D.Expanded=0
+Test2DParamFuncs.TestCoMVal2D.Checked=1
+Test2DParamFuncs.TestCoMVal2D.Expanded=0
+Test2DParamFuncs.TestCoMScaled2D.Checked=1
+Test2DParamFuncs.TestCoMScaled2D.Expanded=0
+Test2DParamFuncs.TestXRes2D.Checked=1
+Test2DParamFuncs.TestXRes2D.Expanded=0
+Test2DParamFuncs.TestYRes2D.Checked=1
+Test2DParamFuncs.TestYRes2D.Expanded=0
+Test2DParamFuncs.TestXPixels2D.Checked=1
+Test2DParamFuncs.TestXPixels2D.Expanded=0
+Test2DParamFuncs.TestYPixels2D.Checked=1
+Test2DParamFuncs.TestYPixels2D.Expanded=0
+Test2DParamFuncs.TestXSize2D.Checked=1
+Test2DParamFuncs.TestXSize2D.Expanded=0
+Test2DParamFuncs.TestYSize2D.Checked=1
+Test2DParamFuncs.TestYSize2D.Expanded=0
 TestProtocolSNC.Checked=1
-TestProtocolSNC.Expanded=0
+TestProtocolSNC.Expanded=1
 TestProtocolSNC.TestProtocolAll.Checked=1
 TestProtocolSNC.TestProtocolAll.Expanded=0
 TestProtocolSNC.TestProtocolVarian.Checked=1
 TestProtocolSNC.TestProtocolVarian.Expanded=0
 TestProtocolPTW.Checked=1
-TestProtocolPTW.Expanded=0
+TestProtocolPTW.Expanded=1
 TestProtocolPTW.TestProtocolVarian.Checked=1
 TestProtocolPTW.TestProtocolVarian.Expanded=0
 TestProtocolPTW.TestProtocolSiemens.Checked=1
@@ -196,7 +236,7 @@ TestProtocolPTW.TestProtocolAFSSAPS.Expanded=0
 TestProtocolPTW.TestProtocolIEC.Checked=1
 TestProtocolPTW.TestProtocolIEC.Expanded=0
 TestProtocolIBA.Checked=1
-TestProtocolIBA.Expanded=0
+TestProtocolIBA.Expanded=1
 TestProtocolIBA.TestProtocolVarian.Checked=1
 TestProtocolIBA.TestProtocolVarian.Expanded=0
 TestProtocolIBA.TestProtocolSiemens.Checked=1
@@ -217,3 +257,7 @@ TestProtocolPylinac.TestProtocolSiemens.Checked=1
 TestProtocolPylinac.TestProtocolSiemens.Expanded=0
 TestProtocolPylinac.TestProtocolElekta.Checked=1
 TestProtocolPylinac.TestProtocolElekta.Expanded=0
+TestProtocolImageJ.Checked=1
+TestProtocolImageJ.Expanded=1
+TestProtocolImageJ.TestProtocolQSA.Checked=1
+TestProtocolImageJ.TestProtocolQSA.Expanded=0
