Basic inflection point

--- a/UnitTests/TestBeamScheme.fpcunit.ini
+++ b/UnitTests/TestBeamScheme.fpcunit.ini
@@ -8,7 +8,7 @@ Height=663
 All Tests.Checked=1
 All Tests.Expanded=1
 Test1DParamFuncs.Checked=1
-Test1DParamFuncs.Expanded=1
+Test1DParamFuncs.Expanded=0
 Test1DParamFuncs.TestCaxVal1D_no_norm.Checked=1
 Test1DParamFuncs.TestCaxVal1D_no_norm.Expanded=0
 Test1DParamFuncs.TestCaxVal1D_norm_cax.Checked=1
@@ -59,6 +59,14 @@ Test1DParamFuncs.TestPenumbra9050Left1D.Checked=1
 Test1DParamFuncs.TestPenumbra9050Left1D.Expanded=0
 Test1DParamFuncs.TestPenumbra9050Right1D.Checked=1
 Test1DParamFuncs.TestPenumbra9050Right1D.Expanded=0
+Test1DParamFuncs.TestFieldDiffLeft1D.Checked=1
+Test1DParamFuncs.TestFieldDiffLeft1D.Expanded=0
+Test1DParamFuncs.TestFieldDiffRight1D.Checked=1
+Test1DParamFuncs.TestFieldDiffRight1D.Expanded=0
+Test1DParamFuncs.TestFieldInflLeft1D.Checked=1
+Test1DParamFuncs.TestFieldInflLeft1D.Expanded=0
+Test1DParamFuncs.TestFieldInflRight1D.Checked=1
+Test1DParamFuncs.TestFieldInflRight1D.Expanded=0
 Test1DParamFuncs.TestFlatnessAve1D.Checked=1
 Test1DParamFuncs.TestFlatnessAve1D.Expanded=0
 Test1DParamFuncs.TestFlatnessDiff1D.Checked=1
@@ -111,6 +119,18 @@ TestSingleProfile.TestPeak.Checked=1
 TestSingleProfile.TestPeak.Expanded=0
 TestSingleProfile.TestArea.Checked=1
 TestSingleProfile.TestArea.Expanded=0
+TestSingleProfile.TestLeftDiff.Checked=1
+TestSingleProfile.TestLeftDiff.Expanded=0
+TestSingleProfile.TestRightDiff.Checked=1
+TestSingleProfile.TestRightDiff.Expanded=0
+TestSingleProfile.TestHPLeft.Checked=1
+TestSingleProfile.TestHPLeft.Expanded=0
+TestSingleProfile.TestHPRight.Checked=1
+TestSingleProfile.TestHPRight.Expanded=0
+TestSingleProfile.TestLeftInfl.Checked=1
+TestSingleProfile.TestLeftInfl.Expanded=0
+TestSingleProfile.TestRightInfl.Checked=1
+TestSingleProfile.TestRightInfl.Expanded=0
 TestBeam.Checked=1
 TestBeam.Expanded=1
 TestBeam.TestCentre_RowOddCollOdd.Checked=1
