fix small float numbers bug

--- a/UnitTests/TestBeamScheme.fpcunit.ini
+++ b/UnitTests/TestBeamScheme.fpcunit.ini
@@ -151,6 +151,8 @@ TestBeam.TestAve.Checked=1
 TestBeam.TestAve.Expanded=0
 TestBeam.TestInvert.Checked=1
 TestBeam.TestInvert.Expanded=0
+TestBeam.TestRescale.Checked=1
+TestBeam.TestRescale.Expanded=0
 TestBeam.TestCentre.Checked=1
 TestBeam.TestCentre.Expanded=0
 TestBeam.TestCreateXProfile.Checked=1
