--- a/beamscheme.lpi
+++ b/beamscheme.lpi
@@ -160,8 +160,8 @@
         <ComponentName Value="BSForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <TopLine Value="1309"/>
-        <CursorPos X="24" Y="1337"/>
+        <TopLine Value="847"/>
+        <CursorPos X="48" Y="875"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -493,8 +493,8 @@
       <Unit49>
         <Filename Value="/usr/lib64/lazarus/lcl/interfaces/qt5/qtobjects.pas"/>
         <EditorIndex Value="-1"/>
-        <TopLine Value="2744"/>
-        <CursorPos Y="2762"/>
+        <TopLine Value="2894"/>
+        <CursorPos Y="2912"/>
         <UsageCount Value="13"/>
       </Unit49>
       <Unit50>
@@ -788,8 +788,8 @@
         <IsPartOfProject Value="True"/>
         <IsVisibleTab Value="True"/>
         <EditorIndex Value="3"/>
-        <TopLine Value="1109"/>
-        <CursorPos Y="1118"/>
+        <TopLine Value="320"/>
+        <CursorPos X="30" Y="343"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -850,8 +850,8 @@
         <Filename Value="source/importunit.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="2"/>
-        <TopLine Value="97"/>
-        <CursorPos X="28" Y="779"/>
+        <TopLine Value="685"/>
+        <CursorPos X="17" Y="673"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -1028,7 +1028,7 @@
         <EditorIndex Value="8"/>
         <TopLine Value="29"/>
         <CursorPos X="28" Y="190"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="26"/>
         <Loaded Value="True"/>
       </Unit112>
       <Unit113>
@@ -1036,7 +1036,7 @@
         <EditorIndex Value="9"/>
         <TopLine Value="480"/>
         <CursorPos Y="510"/>
-        <UsageCount Value="23"/>
+        <UsageCount Value="24"/>
         <Loaded Value="True"/>
       </Unit113>
       <Unit114>
@@ -1068,123 +1068,123 @@
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="452" Column="31" TopLine="429"/>
+        <Caret Line="452" TopLine="429"/>
       </Position1>
       <Position2>
         <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="451" Column="46" TopLine="429"/>
+        <Caret Line="454" TopLine="429"/>
       </Position2>
       <Position3>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="1099" Column="37" TopLine="1087"/>
+        <Filename Value="source/mathsfuncs.pas"/>
+        <Caret Line="456" TopLine="429"/>
       </Position3>
       <Position4>
         <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="48" Column="18" TopLine="22"/>
+        <Caret Line="449" Column="27" TopLine="430"/>
       </Position4>
       <Position5>
         <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="443" Column="31" TopLine="429"/>
+        <Caret Line="452" TopLine="429"/>
       </Position5>
       <Position6>
         <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="452" TopLine="429"/>
+        <Caret Line="454" TopLine="429"/>
       </Position6>
       <Position7>
         <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="454" TopLine="429"/>
+        <Caret Line="452" TopLine="429"/>
       </Position7>
       <Position8>
         <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="456" TopLine="429"/>
+        <Caret Line="454" TopLine="429"/>
       </Position8>
       <Position9>
         <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="452" TopLine="429"/>
+        <Caret Line="456" TopLine="429"/>
       </Position9>
       <Position10>
-        <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="454" TopLine="429"/>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="1126" Column="17" TopLine="1093"/>
       </Position10>
       <Position11>
-        <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="463" TopLine="430"/>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="1113" Column="12" TopLine="1093"/>
       </Position11>
       <Position12>
-        <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="452" TopLine="430"/>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="1115" TopLine="1093"/>
       </Position12>
       <Position13>
-        <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="454" TopLine="430"/>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="1086" Column="43" TopLine="1078"/>
       </Position13>
       <Position14>
-        <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="351" Column="41" TopLine="336"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="1337" Column="24" TopLine="1309"/>
       </Position14>
       <Position15>
-        <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="452" TopLine="429"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="932" TopLine="906"/>
       </Position15>
       <Position16>
-        <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="454" TopLine="429"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="960" TopLine="948"/>
       </Position16>
       <Position17>
-        <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="456" TopLine="429"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="961" TopLine="948"/>
       </Position17>
       <Position18>
-        <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="452" TopLine="429"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="962" TopLine="948"/>
       </Position18>
       <Position19>
-        <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="454" TopLine="429"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="963" TopLine="948"/>
       </Position19>
       <Position20>
-        <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="456" TopLine="429"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="964" TopLine="948"/>
       </Position20>
       <Position21>
-        <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="449" Column="27" TopLine="430"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="965" TopLine="948"/>
       </Position21>
       <Position22>
-        <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="452" TopLine="429"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="966" TopLine="948"/>
       </Position22>
       <Position23>
-        <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="454" TopLine="429"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="944" Column="60" TopLine="930"/>
       </Position23>
       <Position24>
-        <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="452" TopLine="429"/>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="332" Column="16" TopLine="309"/>
       </Position24>
       <Position25>
-        <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="454" TopLine="429"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="875" Column="48" TopLine="847"/>
       </Position25>
       <Position26>
-        <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="456" TopLine="429"/>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="262" Column="3" TopLine="244"/>
       </Position26>
       <Position27>
         <Filename Value="source/bstypes.pas"/>
-        <Caret Line="1126" Column="17" TopLine="1093"/>
+        <Caret Line="338" Column="49" TopLine="320"/>
       </Position27>
       <Position28>
         <Filename Value="source/bstypes.pas"/>
-        <Caret Line="1113" Column="12" TopLine="1093"/>
+        <Caret Line="344" Column="25" TopLine="320"/>
       </Position28>
       <Position29>
         <Filename Value="source/bstypes.pas"/>
-        <Caret Line="1115" TopLine="1093"/>
+        <Caret Line="339" Column="26" TopLine="320"/>
       </Position29>
       <Position30>
         <Filename Value="source/bstypes.pas"/>
-        <Caret Line="1086" Column="43" TopLine="1078"/>
+        <Caret Line="338" Column="31" TopLine="320"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
