add differential field size and centre

--- a/UnitTests/TestBeamScheme.fpcunit.ini
+++ b/UnitTests/TestBeamScheme.fpcunit.ini
@@ -8,7 +8,7 @@ Height=663
 All Tests.Checked=1
 All Tests.Expanded=1
 Test1DParamFuncs.Checked=1
-Test1DParamFuncs.Expanded=0
+Test1DParamFuncs.Expanded=1
 Test1DParamFuncs.TestCaxVal1D_no_norm.Checked=1
 Test1DParamFuncs.TestCaxVal1D_no_norm.Expanded=0
 Test1DParamFuncs.TestCaxVal1D_norm_cax.Checked=1
@@ -63,6 +63,10 @@ Test1DParamFuncs.TestFieldDiffLeft1D.Checked=1
 Test1DParamFuncs.TestFieldDiffLeft1D.Expanded=0
 Test1DParamFuncs.TestFieldDiffRight1D.Checked=1
 Test1DParamFuncs.TestFieldDiffRight1D.Expanded=0
+Test1DParamFuncs.TestFieldCentreDiff1D.Checked=1
+Test1DParamFuncs.TestFieldCentreDiff1D.Expanded=0
+Test1DParamFuncs.TestFieldSizeDiff1D.Checked=1
+Test1DParamFuncs.TestFieldSizeDiff1D.Expanded=0
 Test1DParamFuncs.TestFieldInflLeft1D.Checked=1
 Test1DParamFuncs.TestFieldInflLeft1D.Expanded=0
 Test1DParamFuncs.TestFieldInflRight1D.Checked=1
@@ -115,14 +119,16 @@ TestSingleProfile.TestAve.Checked=1
 TestSingleProfile.TestAve.Expanded=0
 TestSingleProfile.TestMaxDiff.Checked=1
 TestSingleProfile.TestMaxDiff.Expanded=0
-TestSingleProfile.TestPeak.Checked=1
-TestSingleProfile.TestPeak.Expanded=0
+TestSingleProfile.TestPeakFWHM.Checked=1
+TestSingleProfile.TestPeakFWHM.Expanded=0
 TestSingleProfile.TestArea.Checked=1
 TestSingleProfile.TestArea.Expanded=0
 TestSingleProfile.TestLeftDiff.Checked=1
 TestSingleProfile.TestLeftDiff.Expanded=0
 TestSingleProfile.TestRightDiff.Checked=1
 TestSingleProfile.TestRightDiff.Expanded=0
+TestSingleProfile.TestPeakDiff.Checked=1
+TestSingleProfile.TestPeakDiff.Expanded=0
 TestSingleProfile.TestHPLeft.Checked=1
 TestSingleProfile.TestHPLeft.Expanded=0
 TestSingleProfile.TestHPRight.Checked=1
@@ -132,7 +138,7 @@ TestSingleProfile.TestLeftInfl.Expanded=0
 TestSingleProfile.TestRightInfl.Checked=1
 TestSingleProfile.TestRightInfl.Expanded=0
 TestBeam.Checked=1
-TestBeam.Expanded=1
+TestBeam.Expanded=0
 TestBeam.TestCentre_RowOddCollOdd.Checked=1
 TestBeam.TestCentre_RowOddCollOdd.Expanded=0
 TestBeam.TestCentre_RowOddCollEven.Checked=1
@@ -190,7 +196,7 @@ TTestImport.TestBMPOpen.Expanded=0
 TTestImport.TestRAWOpen.Checked=1
 TTestImport.TestRAWOpen.Expanded=0
 Test2DParamFuncs.Checked=1
-Test2DParamFuncs.Expanded=1
+Test2DParamFuncs.Expanded=0
 Test2DParamFuncs.TestCaxVal2D_no_norm.Checked=1
 Test2DParamFuncs.TestCaxVal2D_no_norm.Expanded=0
 Test2DParamFuncs.TestCaxVal2D_norm_cax.Checked=1
@@ -246,7 +252,7 @@ TestProtocolSNC.TestProtocolAll.Expanded=0
 TestProtocolSNC.TestProtocolVarian.Checked=1
 TestProtocolSNC.TestProtocolVarian.Expanded=0
 TestProtocolPTW.Checked=1
-TestProtocolPTW.Expanded=1
+TestProtocolPTW.Expanded=0
 TestProtocolPTW.TestProtocolVarian.Checked=1
 TestProtocolPTW.TestProtocolVarian.Expanded=0
 TestProtocolPTW.TestProtocolSiemens.Checked=1
@@ -258,7 +264,7 @@ TestProtocolPTW.TestProtocolAFSSAPS.Expanded=0
 TestProtocolPTW.TestProtocolIEC.Checked=1
 TestProtocolPTW.TestProtocolIEC.Expanded=0
 TestProtocolIBA.Checked=1
-TestProtocolIBA.Expanded=1
+TestProtocolIBA.Expanded=0
 TestProtocolIBA.TestProtocolVarian.Checked=1
 TestProtocolIBA.TestProtocolVarian.Expanded=0
 TestProtocolIBA.TestProtocolSiemens.Checked=1
@@ -272,7 +278,7 @@ TestProtocolIBA.TestProtocolIEC.Expanded=0
 TestProtocolIBA.TestProtocolDIN.Checked=1
 TestProtocolIBA.TestProtocolDIN.Expanded=0
 TestProtocolPylinac.Checked=1
-TestProtocolPylinac.Expanded=1
+TestProtocolPylinac.Expanded=0
 TestProtocolPylinac.TestProtocolVarian.Checked=1
 TestProtocolPylinac.TestProtocolVarian.Expanded=0
 TestProtocolPylinac.TestProtocolSiemens.Checked=1
