add inflection field centre and size

--- a/UnitTests/TestBeamScheme.fpcunit.ini
+++ b/UnitTests/TestBeamScheme.fpcunit.ini
@@ -71,6 +71,10 @@ Test1DParamFuncs.TestFieldInflLeft1D.Checked=1
 Test1DParamFuncs.TestFieldInflLeft1D.Expanded=0
 Test1DParamFuncs.TestFieldInflRight1D.Checked=1
 Test1DParamFuncs.TestFieldInflRight1D.Expanded=0
+Test1DParamFuncs.TestFieldCentreInfl1D.Checked=1
+Test1DParamFuncs.TestFieldCentreInfl1D.Expanded=0
+Test1DParamFuncs.TestFieldSizeInfl1D.Checked=1
+Test1DParamFuncs.TestFieldSizeInfl1D.Expanded=0
 Test1DParamFuncs.TestFlatnessAve1D.Checked=1
 Test1DParamFuncs.TestFlatnessAve1D.Expanded=0
 Test1DParamFuncs.TestFlatnessDiff1D.Checked=1
@@ -137,6 +141,8 @@ TestSingleProfile.TestLeftInfl.Checked=1
 TestSingleProfile.TestLeftInfl.Expanded=0
 TestSingleProfile.TestRightInfl.Checked=1
 TestSingleProfile.TestRightInfl.Expanded=0
+TestSingleProfile.TestPeakInfl.Checked=1
+TestSingleProfile.TestPeakInfl.Expanded=0
 TestBeam.Checked=1
 TestBeam.Expanded=0
 TestBeam.TestCentre_RowOddCollOdd.Checked=1
