add penumbra to inflection params

--- a/UnitTests/TestBeamScheme.fpcunit.ini
+++ b/UnitTests/TestBeamScheme.fpcunit.ini
@@ -75,6 +75,10 @@ Test1DParamFuncs.TestFieldCentreInfl1D.Checked=1
 Test1DParamFuncs.TestFieldCentreInfl1D.Expanded=0
 Test1DParamFuncs.TestFieldSizeInfl1D.Checked=1
 Test1DParamFuncs.TestFieldSizeInfl1D.Expanded=0
+Test1DParamFuncs.TestPenumbraInflLeft1D.Checked=1
+Test1DParamFuncs.TestPenumbraInflLeft1D.Expanded=0
+Test1DParamFuncs.TestPenumbraInflRight1D.Checked=1
+Test1DParamFuncs.TestPenumbraInflRight1D.Expanded=0
 Test1DParamFuncs.TestFlatnessAve1D.Checked=1
 Test1DParamFuncs.TestFlatnessAve1D.Expanded=0
 Test1DParamFuncs.TestFlatnessDiff1D.Checked=1
