add Normalise to TSinglePRofile and refactor

--- a/UnitTests/TestBeamScheme.fpcunit.ini
+++ b/UnitTests/TestBeamScheme.fpcunit.ini
@@ -8,7 +8,7 @@ Height=663
 All Tests.Checked=1
 All Tests.Expanded=1
 Test1DParamFuncs.Checked=1
-Test1DParamFuncs.Expanded=1
+Test1DParamFuncs.Expanded=0
 Test1DParamFuncs.TestCaxVal1D_no_norm.Checked=1
 Test1DParamFuncs.TestCaxVal1D_no_norm.Expanded=0
 Test1DParamFuncs.TestCaxVal1D_norm_cax.Checked=1
@@ -79,6 +79,8 @@ Test1DParamFuncs.TestPenumbraInflLeft1D.Checked=1
 Test1DParamFuncs.TestPenumbraInflLeft1D.Expanded=0
 Test1DParamFuncs.TestPenumbraInflRight1D.Checked=1
 Test1DParamFuncs.TestPenumbraInflRight1D.Expanded=0
+Test1DParamFuncs.TestDose20Left1D.Checked=1
+Test1DParamFuncs.TestDose20Left1D.Expanded=0
 Test1DParamFuncs.TestFlatnessAve1D.Checked=1
 Test1DParamFuncs.TestFlatnessAve1D.Expanded=0
 Test1DParamFuncs.TestFlatnessDiff1D.Checked=1
@@ -147,6 +149,16 @@ TestSingleProfile.TestRightInfl.Checked=1
 TestSingleProfile.TestRightInfl.Expanded=0
 TestSingleProfile.TestPeakInfl.Checked=1
 TestSingleProfile.TestPeakInfl.Expanded=0
+TestSingleProfile.TestGetRelativePosValue_Left.Checked=1
+TestSingleProfile.TestGetRelativePosValue_Left.Expanded=0
+TestSingleProfile.TestGetRelativePosValue_Right.Checked=1
+TestSingleProfile.TestGetRelativePosValue_Right.Expanded=0
+TestSingleProfile.TestNormalise_none.Checked=1
+TestSingleProfile.TestNormalise_none.Expanded=0
+TestSingleProfile.TestNormalise_cax.Checked=1
+TestSingleProfile.TestNormalise_cax.Expanded=0
+TestSingleProfile.TestNormalise_max.Checked=1
+TestSingleProfile.TestNormalise_max.Expanded=0
 TestBeam.Checked=1
 TestBeam.Expanded=0
 TestBeam.TestCentre_RowOddCollOdd.Checked=1
