fix res init and range check errors

--- a/UnitTests/TestBeamScheme.fpcunit.ini
+++ b/UnitTests/TestBeamScheme.fpcunit.ini
@@ -8,7 +8,7 @@ Height=663
 All Tests.Checked=1
 All Tests.Expanded=1
 Test1DParamFuncs.Checked=1
-Test1DParamFuncs.Expanded=0
+Test1DParamFuncs.Expanded=1
 Test1DParamFuncs.TestCaxVal1D_no_norm.Checked=1
 Test1DParamFuncs.TestCaxVal1D_no_norm.Expanded=0
 Test1DParamFuncs.TestCaxVal1D_norm_cax.Checked=1
@@ -81,6 +81,8 @@ Test1DParamFuncs.TestPenumbraInflRight1D.Checked=1
 Test1DParamFuncs.TestPenumbraInflRight1D.Expanded=0
 Test1DParamFuncs.TestDose20Left1D.Checked=1
 Test1DParamFuncs.TestDose20Left1D.Expanded=0
+Test1DParamFuncs.TestDose20Right1D.Checked=1
+Test1DParamFuncs.TestDose20Right1D.Expanded=0
 Test1DParamFuncs.TestFlatnessAve1D.Checked=1
 Test1DParamFuncs.TestFlatnessAve1D.Expanded=0
 Test1DParamFuncs.TestFlatnessDiff1D.Checked=1
