add dose points

--- a/UnitTests/TestBeamScheme.fpcunit.ini
+++ b/UnitTests/TestBeamScheme.fpcunit.ini
@@ -83,6 +83,18 @@ Test1DParamFuncs.TestDose20Left1D.Checked=1
 Test1DParamFuncs.TestDose20Left1D.Expanded=0
 Test1DParamFuncs.TestDose20Right1D.Checked=1
 Test1DParamFuncs.TestDose20Right1D.Expanded=0
+Test1DParamFuncs.TestDose50Left1D.Checked=1
+Test1DParamFuncs.TestDose50Left1D.Expanded=0
+Test1DParamFuncs.TestDose50Right1D.Checked=1
+Test1DParamFuncs.TestDose50Right1D.Expanded=0
+Test1DParamFuncs.TestDose60Left1D.Checked=1
+Test1DParamFuncs.TestDose60Left1D.Expanded=0
+Test1DParamFuncs.TestDose60Right1D.Checked=1
+Test1DParamFuncs.TestDose60Right1D.Expanded=0
+Test1DParamFuncs.TestDose80Left1D.Checked=1
+Test1DParamFuncs.TestDose80Left1D.Expanded=0
+Test1DParamFuncs.TestDose80Right1D.Checked=1
+Test1DParamFuncs.TestDose80Right1D.Expanded=0
 Test1DParamFuncs.TestFlatnessAve1D.Checked=1
 Test1DParamFuncs.TestFlatnessAve1D.Expanded=0
 Test1DParamFuncs.TestFlatnessDiff1D.Checked=1
